@startuml

title __MACHINELEARNING's Class Diagram__\n

  package com.koltunm.skanner {
    package com.koltunm.skanner.machinelearning {
      class CombinedData {
          - tweetList : List<Tweet>
          - articleList : List<Article>
          - stockQuoteList : List<StockQuote>
          - sentimentAnalyzableList : List<SentimentAnalyzable>
          + CombinedData()
          + getTweetList()
          + getArticleList()
          + getStockQuoteList()
          + getSentimentAnalyzableList()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.machinelearning {
      class DataRow {
          - date : LocalDate
          - positives : int
          - negatives : int
          - neutrals : int
          - totalTweets : int
          - totalArticles : int
          - changePrice : double
          + DataRow()
          + DataRow()
          + getDate()
          + getPositives()
          + getNegatives()
          + getNeutrals()
          + getTotalTweets()
          + getTotalArticles()
          + getClosePrice()
          + getOpenPrice()
          + getHighPrice()
          + getLowPrice()
          + getVolume()
          + processItem()
          - incrementSentimentCount()
          - incrementTotalCount()
          + getChangePrice()
          + setChangePriceFuturePrice()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.machinelearning {
      class DataRowBuilder {
          - rowList : List<DataRow>
          - map : HashMap<LocalDate, DataRow>
          - groupingRange : int
          + DataRowBuilder()
          + getRowList()
          - populateList()
          - getNextRow()
          - generateMap()
          - addRecord()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.machinelearning {
      class DataSet {
          - data : Instances
          + DataSet()
          + DataSet()
          + DataSet()
          - initInstanceObject()
          + createDataSet()
          + writeToFile()
          - loadFromFile()
          + getInstances()
          + removeAttributes()
          + toString()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.machinelearning {
      class LinearRegressionModel {
          + predict()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.machinelearning {
      interface MachineLearning {
          {abstract} + predict()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.machinelearning {
      class PredictionResult {
          - evaluation : Evaluation
          - priceChange : double
          - newPrice : double
          - amountChange : double
          + PredictionResult()
          + getEvaluation()
          + getPriceChange()
          + toString()
          + getAmountChange()
          + setAmountChange()
          + getNewPrice()
          + setNewPrice()
      }
    }
  }
  

  DataRow o-- StockQuote : stockQuote
  LinearRegressionModel -up-|> MachineLearning


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
